--- a/profilecard style.css
+++ b/profilecard style.css
@@ -13,7 +13,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color:rgb(204, 230, 227) ;
+    background-color:rgb(175, 215, 210) ;
   }
   .profile-card {
     display: flex;
@@ -23,15 +23,26 @@
     width: 100%;
     background:rgb(247, 247, 247) ;
     border-radius:  18px;
-    padding: 10px;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.51) ;
+    padding: 25px;
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.51) ;
+    position: absolute;
+  }
+  .profile-card::before{
+    content:"";
+    position:absolute;
+    top: 0px;
+    left: 0px;
+    height: 50%;
+    width: 100%;
+    border-radius: 18px 18px 0 0;
+    background-color: rgb(64, 235, 235);
   }
   .image{
     position: relative;
     height: 102px;
     width: 102px;
     border-radius: 50%;
-    background-color: rgb(120, 199, 215);
+    background-color: rgb(73, 132, 220);
     padding: 3px; 
     margin-bottom: 25px;
   }
@@ -59,18 +70,19 @@
   .profile-card .media-buttons {
     display: flex;
     align-items: center;
+    margin-top: 10px;
   }
   .media-buttons .link {
     display: flex;
-    flex-direction: column;
+    align-items: center;
     justify-content: center;
     color: white;
-    height: 20px;
-    width: 20px;
+    font-size:18px ;
+    height: 29px;
+    width: 29px;
     border-radius: 50%;
-    background-color: rgb(87, 82, 82);
+    margin:0 4px;
+    background-color:rgb(17, 104, 225) ;
+    text-decoration: none;
   }
-  .link .bxl-youtube {
-    height: 15px;
-    width: 50000px;
-  }
+ 
